--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container" >
-        <h2>OTP Generate</h2>
+        <h2>OTP Generator</h2>
         <h6><b>By mudabbir pasha</b></h6>
         <div id="otp"><img src="index.png" height="100px" width="100px" /></div>
         
