--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container" >
         <h2>OTP Generator</h2>
         <h6><b>By mudabbir pasha</b></h6>
-        <div id="otp"><img src="index.png" height="100px" width="100px" /></div>
+        <div id="otp" class="image-container"><img class="transition-image" src="index.png" height="100px" width="100px" /></div>
         
         <button id="btn" onclick="otpgenerate()">
             Get OTP
@@ -18,6 +18,14 @@
         <script src="script.js"></script>
 
     </div>
-    
+
+    <div>
+        <a href="feedback.html" class="feedback-link">Give Feedback</a>
+    </div>
+    <div class="terms-conditions">
+        Note:
+        <p>This OTP generator is intended for fun and educational purposes only.</p> 
+        <p>It does not provide real security and cannot be used for sensitive or critical applications.</p>
+    </div>
 </body>
 </html> 
