--- a/feedback.html
+++ b/feedback.html
@@ -133,7 +133,7 @@
       </div>
   </div>
   <div class="footer">
-    <p>Created by Mudabbir Pasha...</p>
+    <p>Created by Mudabbir Pasha..&hearts;</p>
     <div class="logo linkedin-logo" onclick="window.open('https://www.linkedin.com/in/mohammed-mudabbir-pasha-9a135321b/')"></div>
     <div class="logo instagram-logo" onclick="window.open('https://www.instagram.com/mysteriosohail/?hl=en')"></div>
     <div class="logo threads-logo" onclick="window.open('https://www.threads.net/@mysteriosohail')"></div>
