--- a/feedback.html
+++ b/feedback.html
@@ -146,7 +146,7 @@
     function sendCommentByEmail() {
       const comment = document.getElementById("feedback").value;
       const subject = "Feedback from a Friend";
-      const recipient = "sohailmudabbir.com"; // Replace with the recipient's email address
+      const recipient = "sohailmudabbir@gmail.com"; // Replace with the recipient's email address
       const mailtoLink = `mailto:${recipient}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(comment)}`;
       window.location.href = mailtoLink;
     }
